crates/perl-lsp/tests/snapshots/lsp_pull_diagnostics_snapshot_test__workspace_diagnostic_reports.snap
---
source: crates/perl-lsp/tests/lsp_pull_diagnostics_snapshot_test.rs
expression: workspace_result
---
items:
  - items:
      - code: PL101
        data:
          category: StrictWarnings
          code: PL101
          fixable: true
          tags: []
        message: "Consider adding 'use warnings;' for better error detection\nSuggestion: Add 'use warnings;' at the top of the file"
        range:
          end:
            character: 0
            line: 0
          start:
            character: 0
            line: 0
        relatedInformation:
          - location:
              range:
                end:
                  character: 0
                  line: 0
                start:
                  character: 0
                  line: 0
              uri: "file:///workspace-diagnostic-a.pl"
            message: "💡 Add 'use warnings;' at the beginning of your script"
          - location:
              range:
                end:
                  character: 0
                  line: 0
                start:
                  character: 0
                  line: 0
              uri: "file:///workspace-diagnostic-a.pl"
            message: "ℹ️ The 'use warnings' pragma enables helpful warning messages about questionable constructs, uninitialized values, and deprecated features."
        severity: 3
        source: perl-lsp
      - code: PL102
        data:
          category: StrictWarnings
          code: PL102
          fixable: true
          tags:
            - Unnecessary
        message: "Variable '$x' is declared but never used -- prefix with '_' or remove it\nSuggestion: Prefix as '_x'"
        range:
          end:
            character: 5
            line: 1
          start:
            character: 3
            line: 1
        relatedInformation:
          - location:
              range:
                end:
                  character: 5
                  line: 1
                start:
                  character: 3
                  line: 1
              uri: "file:///workspace-diagnostic-a.pl"
            message: "💡 Remove the unused variable or prefix with '_' to indicate it's intentionally unused"
        severity: 2
        source: perl-lsp
        tags:
          - 1
      - code: PL103
        data:
          category: StrictWarnings
          code: PL103
          fixable: true
          tags: []
        message: "Variable '$y' is used but not declared -- add 'my $y' to declare it in this scope\nSuggestion: Add 'my $y;' before this line"
        range:
          end:
            character: 8
            line: 2
          start:
            character: 6
            line: 2
        relatedInformation:
          - location:
              range:
                end:
                  character: 8
                  line: 2
                start:
                  character: 6
                  line: 2
              uri: "file:///workspace-diagnostic-a.pl"
            message: "💡 Declare the variable with 'my', 'our', 'local', or 'state'"
          - location:
              range:
                end:
                  character: 8
                  line: 2
                start:
                  character: 6
                  line: 2
              uri: "file:///workspace-diagnostic-a.pl"
            message: "ℹ️ Under 'use strict', all variables must be declared before use. Use 'my' for lexical scope or 'our' for package variables."
        severity: 1
        source: perl-lsp
    kind: full
    resultId: "<stable-result-id>"
    uri: "file:///workspace-diagnostic-a.pl"
    version: 1
  - items:
      - code: PL100
        data:
          category: StrictWarnings
          code: PL100
          fixable: true
          tags: []
        message: "Consider adding 'use strict;' for better error checking\nSuggestion: Add 'use strict;' at the top of the file"
        range:
          end:
            character: 0
            line: 0
          start:
            character: 0
            line: 0
        relatedInformation:
          - location:
              range:
                end:
                  character: 0
                  line: 0
                start:
                  character: 0
                  line: 0
              uri: "file:///workspace-diagnostic-b.pl"
            message: "💡 Add 'use strict;' at the beginning of your script"
          - location:
              range:
                end:
                  character: 0
                  line: 0
                start:
                  character: 0
                  line: 0
              uri: "file:///workspace-diagnostic-b.pl"
            message: "ℹ️ The 'use strict' pragma enforces good coding practices by requiring variable declarations, disabling barewords, and preventing symbolic references."
        severity: 3
        source: perl-lsp
      - code: PL101
        data:
          category: StrictWarnings
          code: PL101
          fixable: true
          tags: []
        message: "Consider adding 'use warnings;' for better error detection\nSuggestion: Add 'use warnings;' at the top of the file"
        range:
          end:
            character: 0
            line: 0
          start:
            character: 0
            line: 0
        relatedInformation:
          - location:
              range:
                end:
                  character: 0
                  line: 0
                start:
                  character: 0
                  line: 0
              uri: "file:///workspace-diagnostic-b.pl"
            message: "💡 Add 'use warnings;' at the beginning of your script"
          - location:
              range:
                end:
                  character: 0
                  line: 0
                start:
                  character: 0
                  line: 0
              uri: "file:///workspace-diagnostic-b.pl"
            message: "ℹ️ The 'use warnings' pragma enables helpful warning messages about questionable constructs, uninitialized values, and deprecated features."
        severity: 3
        source: perl-lsp
    kind: full
    resultId: "<stable-result-id>"
    uri: "file:///workspace-diagnostic-b.pl"
    version: 1
